gateway-test/manifests/echo-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      serviceAccountName: echo-server
      containers:
        - name: echo-server
          image: ghcr.io/astral-sh/uv:python3.14-trixie
          imagePullPolicy: IfNotPresent
          command: ["uv", "run", "/app/echo_server.py"]
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: code
              mountPath: /app
              readOnly: true
      volumes:
        - name: code
          configMap:
            name: echo-server
---
apiVersion: v1
kind: Service
metadata:
  namespace: echo-server
  name: echo-server
  labels:
    app: echo-server
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
      appProtocol: http
  selector:
    app: echo-server
