gateway-test/manifests/echo-server-agentgateway.yaml
# Resources for routing and authenticating traffic to echo-server using the
# agentgateway controller
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server-agentgateway
  namespace: echo-server
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  hostnames:
    - "echo-server-agentgateway.example.com"
  rules:
    - backendRefs:
        - name: echo-server
          port: 8000
