gateway-test/manifests/echo-server-kgateway.yaml
# Resources for routing and authenticating traffic to echo-server using the
# kgateway controller
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server-kgateway
  namespace: echo-server
spec:
  parentRefs:
    - name: kgateway-proxy
      namespace: kgateway-system
  hostnames:
    - "echo-server-kgateway.example.com"
  rules:
    - backendRefs:
        - name: echo-server
          port: 8000
---
# Note this is in the auth-server namespace, NOT the echo-server namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-echo-server-to-auth-server
  namespace: auth-server
spec:
  from:
    - group: gateway.kgateway.dev
      kind: GatewayExtension
      namespace: echo-server
  to:
    - group: ""
      kind: Service
